--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack --mode production",
     "predeploy": "npm run build",
     "watch": "tailwindcss -i ./src/style.css -o ./dist/style.css --watch",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
